load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_library(
    name = "point2d",
    hdrs = ["point2d.hpp"],
    srcs = ["point2d.cpp"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "point2d_test",
    srcs = ["point2d_test.cpp"],
    deps = [
        ":point2d",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "point2d_client",
    srcs = ["point2d_client.cpp"],
    deps = [":point2d"],
)

cc_library(
    name = "interval1d",
    hdrs = ["interval1d.hpp"],
    srcs = ["interval1d.cpp"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "interval1d_test",
    srcs = ["interval1d_test.cpp"],
    deps = [
        ":interval1d",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "interval1d_factory",
    hdrs = ["interval1d_factory.hpp"],
    srcs = ["interval1d_factory.cpp"],
    deps = [":interval1d"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "interval1d_factory_test",
    srcs = ["interval1d_factory_test.cpp"],
    deps = [
        ":interval1d_factory",
        "@com_google_googletest//:gtest_main",
    ],
)
