load("@rules_cc//cc:defs.bzl", "cc_binary")


cc_library(
    name = "counter",
    hdrs = ["counter.hpp"],
    srcs = ["counter.cpp"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "counter_test",
    srcs = ["counter_test.cpp"],
    deps = [
        ":counter",
        "@com_google_googletest//:gtest_main",
    ],
)
