cc_library(
    name = "date_exception",
    hdrs = ["date_exception.hpp"],
    visibility = ["//visibility:public"],
)
    
cc_library(
    name = "smart_date",
    hdrs = ["smart_date.hpp"],
    srcs = ["smart_date.cpp"],
    deps = ["date_exception"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "smart_date_test",
    srcs = ["smart_date_test.cpp"],
    deps = [
        "smart_date",
        "@com_google_googletest//:gtest_main",
    ],
)
