cc_library(
    name = "in",
    hdrs = ["in.hpp"],
    srcs = ["in.cpp"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "in_test",
    srcs = ["in_test.cpp"],
    deps = [
        ":in",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "std_out",
    hdrs = ["std_out.hpp"],
    srcs = ["std_out.cpp"],
)

cc_test(
    name = "std_out_test",
    srcs = ["std_out_test.cpp"],
    deps = [
        ":std_out",
        "@com_google_googletest//:gtest_main",
    ],
)
