load("@rules_cc//cc:defs.bzl", "cc_binary")

load(
    "//bazel:sedgealgos_build_system.bzl",
    "sedgealgos_cc_test",
)

cc_library(
    name = "std_random",
    hdrs = ["std_random.hpp"],
    srcs = ["std_random.cpp"],
    visibility = ["//visibility:public"],
)

sedgealgos_cc_test(
    name = "std_random_test",
    srcs = ["std_random_test.cpp"],
    deps = [
        ":std_random",
    ],
)
