load(
    "//bazel:sedgealgos_build_system.bzl",
    "sedgealgos_cc_test",
    "sedgealgos_cc_library",
)

sedgealgos_cc_library(
    name = "std_random",
    hdrs = ["std_random.hpp"],
    srcs = ["std_random.cpp"],
)

sedgealgos_cc_test(
    name = "std_random_test",
    srcs = ["std_random_test.cpp"],
    deps = [
        ":std_random",
    ],
)
